// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a hover clause on native stays on the runtime path 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack backgroundColor="red hover:green" />
      )
    }
"
`;

exports[`a named group hover clause on native stays on the runtime path 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack group="row">
          <YStack
            backgroundColor="red group-hover/row:green"
          />
        </YStack>
      )
    }
"
`;

exports[`a named group press clause on native stays on the runtime path 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack group="row">
          <YStack
            backgroundColor="red group-press/row:green"
          />
        </YStack>
      )
    }
"
`;

exports[`a theme clause on native de-opts to the runtime path 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack backgroundColor="red dark:green" />
      )
    }
"
`;

exports[`basic conditional extraction 1`] = `
"
    import { YStack } from 'tamagui'
    let x = true
    export function Test() {
      return (
        <>
          <__TamaguiStableView120 _expressions={[x]} />
          <YStack {...x && { backgroundColor: 'red' }} />
        </>
      )
    }

function __TamaguiNativeStyle120() { return __TamaguiNativeStyle120._ ?? (__TamaguiNativeStyle120._ = {"flexDirection":"column"}); } __TamaguiNativeStyle120();
const __TamaguiNativeView = require('react-native').View;
const __TamaguiStableView120 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle120._ ?? __TamaguiNativeStyle120(), expressions[0] ? {"backgroundColor":"red"} : {"backgroundColor":"blue"}], false, false);"
`;

exports[`basic extraction 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <__TamaguiNativeView style={__TamaguiNativeStyle90._ ?? __TamaguiNativeStyle90()} />
      )
    }

function __TamaguiNativeStyle90() { return __TamaguiNativeStyle90._ ?? (__TamaguiNativeStyle90._ = {"flexDirection":"column","backgroundColor":"red"}); } __TamaguiNativeStyle90();
const __TamaguiNativeView = require('react-native').View;"
`;

exports[`conditional font family lowers per-branch with per-family size resolution 1`] = `
"
  import { SizableText } from 'tamagui'
  export function Test({ compact }) {
    return (
      <__TamaguiStableText98 _expressions={[compact]} >
        Go
      </__TamaguiStableText98>
    )
  }

function __TamaguiNativeStyle98() { return __TamaguiNativeStyle98._ ?? (__TamaguiNativeStyle98._ = {"fontFamily":"-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif","fontSize":22,"fontWeight":400,"letterSpacing":0,"lineHeight":33}); } __TamaguiNativeStyle98();
const __TamaguiNativeText = require('react-native').Text;
const __TamaguiStableText98 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle98._ ?? __TamaguiNativeStyle98(), { "color": _theme["color"]?.get() }, expressions[0] ? {} : {"fontWeight":700,"lineHeight":30}], true, false);"
`;

exports[`do NOT flatten dynamic values with theme access 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack bg='color' height={props.height}/>
      )
    }
"
`;

exports[`do NOT flatten dynamic values with theme access, dynamic values, and conditional 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack bg={props.isLoading ? 'color' : 'red'} height={props.height}/>
      )
    }
"
`;

exports[`do NOT flatten multiple dynamic values with theme access and conditional 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack bg={props.isLoading ? 'color' : 'red'} height={props.height} width={props.width}/>
      )
    }
"
`;

exports[`dynamic ternary lowers per-branch, only the test survives 1`] = `
"
  import { View } from 'tamagui'
  export function Test(props) {
    return (
      <__TamaguiStableView85 _expressions={[props !== 123]} />
    )
  }

function __TamaguiNativeStyle85() { return __TamaguiNativeStyle85._ ?? (__TamaguiNativeStyle85._ = {}); } __TamaguiNativeStyle85();
const __TamaguiNativeView = require('react-native').View;
const __TamaguiStableView85 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle85._ ?? __TamaguiNativeStyle85(), expressions[0] ? {"marginBottom":12} : {"marginBottom":0}], false, false);"
`;

exports[`flat transform props 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(isLoading) {
      return (
        <__TamaguiStableView99
          _expressions={[isLoading]}



        />
      )
    }

function __TamaguiNativeStyle99() { return __TamaguiNativeStyle99._ ?? (__TamaguiNativeStyle99._ = {"flexDirection":"column","transform":[{"translateX":10},{"translateY":20},{"rotate":"10deg"}]}); } __TamaguiNativeStyle99();
const __TamaguiNativeView = require('react-native').View;
const __TamaguiStableView99 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle99._ ?? __TamaguiNativeStyle99(), expressions[0] ? {"transform":[{"scale":1},{"translateX":10},{"translateY":20},{"rotate":"10deg"}]} : {"transform":[{"scale":2},{"translateX":10},{"translateY":20},{"rotate":"10deg"}]}], false, false);"
`;

exports[`handles style order merge properly 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack
          scale={props.isLoading ? 1 : 2}
          x={10}
          {...props}
          rotate="10deg"
        />
      )
    }
"
`;

exports[`normalize dynamic values with no theme access 1`] = `
"
    import { YStack } from 'tamagui'
    const height = 200
    export function Test(props) {
      return (
        <YStack height={height} width={props.width}/>
      )
    }
"
`;

exports[`normalize dynamic values with theme access only 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <__TamaguiStableView95 />
      )
    }

function __TamaguiNativeStyle95() { return __TamaguiNativeStyle95._ ?? (__TamaguiNativeStyle95._ = {"flexDirection":"column"}); } __TamaguiNativeStyle95();
const __TamaguiNativeView = require('react-native').View;
const __TamaguiStableView95 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle95._ ?? __TamaguiNativeStyle95(), { "backgroundColor": _theme["color"]?.get() }], true, false);"
`;

exports[`normalize ternaries with the conditional dynamic values 1`] = `
"
  import { View } from 'tamagui'
  export function Test(props) {
    return (
      <View marginBottom={props !== 123 ? 12 : props.mb} />
    )
  }
"
`;

exports[`string ternary and media prop remain distinct on the runtime component 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test({ someString }) {
      return (
        <YStack
          width={someString ? 24 : 66}
          height="sm:30px"
        />
      )
    }
"
`;

exports[`ternary with mixed theme-token and non-token values preserves all props 1`] = `
"
    import { Text } from 'tamagui'
    export function Test({ isActive, label }) {
      return (
        <Text
          fontSize="3"
          fontWeight={isActive ? '600' : '400'}
          color={isActive ? 'color12' : 'color11'}
        >
          {label}
        </Text>
      )
    }
"
`;

exports[`theme value extraction should work when no theme variables used 1`] = `
"
    import { Paragraph } from 'tamagui'
    export function Test() {
      return (
        <__TamaguiNativeText style={__TamaguiNativeStyle93._ ?? __TamaguiNativeStyle93()}>hello world</__TamaguiNativeText>
      )
    }

function __TamaguiNativeStyle93() { return __TamaguiNativeStyle93._ ?? (__TamaguiNativeStyle93._ = {"fontFamily":"-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif","fontSize":14,"lineHeight":20,"color":"red"}); } __TamaguiNativeStyle93();
const __TamaguiNativeText = require('react-native').Text;"
`;

exports[`theme value extraction should work when theme variables used 1`] = `
"
    import { Paragraph } from 'tamagui'
    export function Test() {
      return (
        <__TamaguiStableText93>hello world</__TamaguiStableText93>
      )
    }

function __TamaguiNativeStyle93() { return __TamaguiNativeStyle93._ ?? (__TamaguiNativeStyle93._ = {"fontFamily":"-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif","fontSize":14,"lineHeight":20}); } __TamaguiNativeStyle93();
const __TamaguiNativeText = require('react-native').Text;
const __TamaguiStableText93 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle93._ ?? __TamaguiNativeStyle93(), { "color": _theme["color"]?.get() }], true, false);"
`;
